--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,3 +10,9 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+input-component {
+	display: block;
+	margin: 0 auto;
+	width: 100%;
+	max-width: 30%;
+}
