--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
 body {
-	background: #87A97E;
-	font-family: Arial, Helvetica, sans-serif;
+  background: #87a97e;
+  font-family: Arial, Helvetica, sans-serif;
 }
